--- a/frontendErgoBalance/src/components/menu/menu.scss
+++ b/frontendErgoBalance/src/components/menu/menu.scss
@@ -12,7 +12,7 @@
 .menu__nav {
     width: 100vw;
     margin: auto;
-    border-top: 5px solid black;
+    border-top: 5px solid var(--color-white);
     background-color: var(--color-white);
     display: flex;
     flex-direction: row;
