--- a/frontendErgoBalance/src/views/intervalView/intervalView.scss
+++ b/frontendErgoBalance/src/views/intervalView/intervalView.scss
@@ -12,7 +12,7 @@
     width: 90vw;
     text-align: center;
     overflow: scroll;
-
+    margin-bottom: 0.5rem;
 }
 
 .active-view {
