--- a/frontendErgoBalance/src/views/mainView/mainView.scss
+++ b/frontendErgoBalance/src/views/mainView/mainView.scss
@@ -9,27 +9,28 @@
   height: 80vh;
   width: 90vw;
   justify-content: space-around;
-  padding: 2rem;
-  position: relative;
   background-color: var(--color-white);
   border-radius: #{$borders-radius-sm};
-  padding: 0rem 3rem;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  text-align: left;
   overflow: scroll;
-}
-
-.mainView__container p {
-  margin: 1rem 0;
+  margin-bottom: 0.5rem;
 }
 
 .mainView__heading {
   text-transform: uppercase;
   font-size: 1.5rem;
+  margin: 1rem;
+}
+
+.mainView__container p {
+  max-width: 80vw;
+  text-align: left;
+  font-family: var(--font-primary);
+  font-size: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mainView__image {
-  max-width: 80vw;
+  width: 100%;
 }
 
 .mainView__icon {
